--- a/style.css
+++ b/style.css
@@ -4,15 +4,20 @@ Theme Name: ariel2020
  
 /*body{height: 100%; background: rgb(25,25,25)  url(./img/body-bg.jpg) center top no-repeat;color:#fff}*/
 
+
+
 :root{
 	font-size:14px;
 	font-family:Abel, sans-serif;
 }
 *{box-sizing:border-box}
 
-html{background: #000000;height:100%}
-body{color:#fff}
-body{HEIGHT: 100%;margin: 0 auto;font: 12px/15px Abel, Arial, Helvetica, sans-serif;padding: 0;color: #fff;background:#000;}
+
+
+
+html{background: #000000;height:100%;  scroll-behavior: smooth;}
+body{color:#fff;}
+body{HEIGHT: 100%;margin: 0 auto;font: 12px/15px Abel, Arial, Helvetica, sans-serif;padding: 0;color: #fff;background: #181023;}
 a{    color: rgb(228 181 112);;}
 a:hover{
      color: rgb(233 198 145);
@@ -54,7 +59,13 @@ a:visited{color: rgb(233 198 145);}
 h1{font-size: 20px;line-height:28px}
 h2{font: normal 65px/58px Abel, sans-serif;color: #fff;}
  
-.layout{/* height: 4140px; *//* background: url(./img/glitch.gif); */position: absolute;width: 100%;background: #181023;/* height:300%; */}
+.layout{
+ /* height: 4140px; */
+ /* background: url(./img/glitch.gif); */
+ position: absolute;
+ width: 100%;
+ background: #181023;
+  }
 
 .layout_b{     }  
 
@@ -113,6 +124,18 @@ h2{font: normal 65px/58px Abel, sans-serif;color: #fff;}
 .works h2{font: normal 4.5rem/1em Abel, sans-serif;padding: 0px 0 30px;text-align: center;}
 .works article{height: 275px;margin: 20px 0;overflow: hidden;padding: 4px;}
 
+.works article.active h3{
+	position: fixed;
+	z-index:111111;
+	top: 55px;
+	left:50%;
+	transform:translateX(-50%);
+	display:block !important;
+	font-size: 20px;
+	background: #3e3e3eb8;
+	padding: 7px 18px;
+	border-radius: .2rem;
+	}
 
 
 .works article .front-image img{
@@ -174,12 +197,27 @@ h2{font: normal 65px/58px Abel, sans-serif;color: #fff;}
 
 
 .works article  .slidercont img{opacity:0}
-.works article.active .slidercont {position:absolute;left: 5%;right: 5%;z-index:11111;top: 100px;bottom: 10px;/* background:black; */padding: 10px 60px;box-sizing:border-box;/* background: rgb(7 5 10); *//* box-shadow: 10px 7px 40px #000, inset 0 7px 60px #0000008f; *//* margin-top: -380px; */position: fixed;overflow: hidden;}
+.works article.active .slidercont {position:absolute;left: 15%;right: 15%;z-index:11111;top: 100px;bottom: 10px;/* background:black; */padding: 10px 60px;box-sizing:border-box;/* background: rgb(7 5 10); *//* box-shadow: 10px 7px 40px #000, inset 0 7px 60px #0000008f; *//* margin-top: -380px; */position: fixed;overflow: hidden;}
 .works article.active .slidercont img{opacity:1}
+
+.previous_gal,.next_gal{position: fixed;top: 47.2%;max-width: 90px;height: auto;background:#5552;padding: 1.2rem .7rem .7rem .7rem;border-radius:0.2rem !important;z-index:1111111;cursor: pointer;text-align: center;font-size: 16px;color: rgb(187 116 15);transition: all .2s ease;transform: translateY(-50%);overflow: hidden;}
+
+.previous_gal:hover,.next_gal:hover{background:#423d2d}
+.previous_gal:active,.next_gal:active{background:rgb(187 116 15)}
+
+
+
+.previous_gal{left: 00px;} 
+.next_gal{right: 0px;}
+
+
+.previous_gal img,
+.next_gal img{/* 	position: fixed; *//* 	top: 47.2%; */max-width: 70px;height: auto;/* 	background:#5552; *//* 	padding: .7rem; */border-radius:0.2rem !important;z-index:1111111;cursor: pointer;/* 	text-align: center; *//* 	font-size: 16px; *//* 	color: rgb(187 116 15); */transition: all .2s ease;/* 	transform: translateY(-50%); */overflow: hidden;}
+
 
 .splide.is-active .splide__list{height:100%; }
 
-.works article.active .slidercont figure{height:100%;display: inline-block;vertical-align: middle;}
+.works article.active .slidercont figure{height:100%;display: inline-block;vertical-align: middle;MARGIN: 0;}
 .works article.active .slidercont figure:before{content:" " ;display: inline-block;height: 100%;vertical-align: middle;}
 
 .works article.active .slidercont img{
@@ -191,28 +229,62 @@ h2{font: normal 65px/58px Abel, sans-serif;color: #fff;}
 }
 .works article.active .slidercont .splide__track{/* top:50%; *//* transform:translateY(-50%); *//* position:absolute */height: 99%;}
 
-.works article ul li.splide__slide{/* background:red; */margin:0 10px;height: 100%;width: 100px;display: block;text-align: center;}
+.works article ul li.splide__slide{/* background:red; */margin:0 10px;height: 100%;/* width: auto !important; */display: block;text-align: center;}
 .works article ul li a{}
 .works article ul li a img{}
-.works article span.close-bt{z-index: 1111;position: absolute;right: 3px;top: 7px;font-size: 18px;COLOR: #ec9c29;/* background: #000000; */width: 29px;height: 30px;border-radius: 100px;padding: 6px 8px 19px 2px;box-sizing: border-box;}
-.works article span.close-bt:hover{color:#333}
+.works article span.close-bt{
+    display:none;
+    z-index: 1111;
+    position: fixed;
+    right: 53px;
+    top: 77px;
+    font-size: 18px;
+    COLOR: #905807;
+    /* background: #000000; */
+    width: 39px;
+    height: 39px;
+    border-radius: 100px;
+    padding: 6px 8px 19px 2px;
+    box-sizing: border-box;
+    cursor: pointer;
+    font-size: 27px;
+    }
+.works article.active span.close-bt {display:block}
+.works article span.close-bt:hover{color:rgb(187 116 15)}
 .works article .carousel{position:absolute;top:0 }
 
+.works article span.close-bt:active{color:rgb(86, 53, 5)}
 
 
+.works article.active .slidercont img {
+    cursor: move; /* fallback if grab cursor is unsupported */
+    cursor: grab;
+    cursor: -moz-grab;
+    cursor: -webkit-grab;
+}
 
-
+ /* (Optional) Apply a "closed-hand" cursor during drag operation. */
+.works article.active .slidercont img:active {
+    cursor: grabbing;
+    cursor: -moz-grabbing;
+    cursor: -webkit-grabbing;
+}
 
 
 .splide__arrows{width: 100%;/* background:blue; */position: absolute;height: 97%;left: 0;right: 0;}
-.splide__arrow{background:none;border:none;position:absolute;top: 50%;background: #00000070;z-index: 1111111111111;padding: 50px 10px 49px 25px;width: 70px;box-sizing:border-box;border:1px solid transparent;box-shadow: 10px 7px 10px #000;margin-top: -70px;}
+.splide__arrow{background:none;border:none;position:absolute;top: 50%;/* background: #00000070; */z-index: 1111111111111;padding: 50px 0px 49px 0;width: 70px;box-sizing:border-box;border:1px solid transparent;/* box-shadow: 10px 7px 10px #000; */margin-top: -70px;border-radius: 0;/* background: aliceblue; */}
 
 .splide__arrow:hover{/* border: 1px solid #35233c; *//* background: #241d2d; */}
+
+.splide__arrow[disabled]{pointer-events:none;opacity:.5 !important;filter:grayscale(1) }
  
-.splide__arrow--next{right: 0;}
-.splide__arrow--prev{left: 0;transform: scaleX(-1);}
-.splide__arrow svg{fill: #905807;transition:all .2s ease;}
-.splide__arrow:hover svg{transform:translateX(2px);fill: rgb(187 116 15)}
+.splide__arrow--next{right: 0;/* text-align: right; *//* background: aliceblue; */padding: 50px  0 49px 0px;}
+.splide__arrow--prev{left: 0;}
+
+.splide__arrow svg{fill: #905807;transition:all .2s ease;width: 4.2em !important;height: 2.2em !important;}
+
+
+.splide__arrow:hover svg{fill: rgb(187 116 15)}
 .splide__arrow:active svg{ fill: rgb(86 53 5)}
 
 .splide__pagination button{margin:8px}
@@ -281,11 +353,11 @@ video{width: 100%;height: 100%  !important;margin-top: 0;top: 0;left: 0;bottom: 
   transition:background-size 1s, background-color 1s;  transition: background-color .5s;}
 	
 .row.about  .bttt:hover {
-
+/* 
   background-image:linear-gradient(to right, rgba(255,255,255,0) 0%, rgb(255 255 255 / 1%) 40%, rgb(255 255 255 / 0%) 50%, rgb(255 255 255 / 0%) 100%);
   background-repeat:no-repeat;
   background-size:250% 100%; 
-  transition:background-size 1s, background-color 1s;
+  transition:background-size 1s, background-color 1s; */
 }
 		
  
@@ -516,7 +588,7 @@ transition:all .5s ease;}
   transition:  all 0.7s ease-out;
   }
   
-   .circles div.one:hover{
+/*    .circles div.one:hover{
   transform: scale(1);border:6px solid rgba(239,8,176, 0.8);
   -o-transform: scale(1);border:6px solid rgba(239,8,176, 0.8);
   -moz-transform: scale(1);border:6px solid rgba(239,8,176, 0.8);
@@ -530,7 +602,7 @@ transition:all .5s ease;}
    .circles div.one:hover .three{border:10px solid rgba(239,8,176, 0.8);
   -webkit-animation:stepfive 0.8s 0.90s infinite alternate;
   }
-  
+   */
    .circles .one{border:6px solid rgba(239,8,176, 0.8)}
    .circles .two{
   border:8px solid rgba(0,207,244, 0.8);
@@ -693,10 +765,20 @@ color:#fff;
 		}
 
 .works article{height: 115px;}
+.works article.active .slidercont {position:absolute;left:0%;right:0%;z-index:11111;top: 100px;bottom:10px;padding:10px 00px;box-sizing:border-box;position: fixed;overflow: hidden;}
+.splide__arrow{display:none  !important}
 
+.works article.active h3{top:100px}
 
+.works article span.close-bt{
+ 
+    right: 13px;
+ 
+  
+    }
 	.row.about.third-row .col-sm-12 h3.front{
-	 text-indent: 2px;
+	 
+text-indent: 2px;
 	}
 .footer .row{min-height:700px}
 
@@ -710,4 +792,4 @@ color:#fff;
 	.row.about.third-row .row ul{text-align:right !important;}
 
 
-  } 
+  } } 
